# undergraduate_projects

./: readme.md
Java程序设计与训练/: readme.md
人工智能导论/proj1_pinyin/: Cargo.toml  readme.md  拼音汉字表.txt
人工智能导论/proj2_connect_four/: Judge.cpp  Judge.h  Point.h  Policy.h  Strategy.cpp  Strategy.h  Strategy.vcxproj  readme.md
人工智能导论/proj3_emotion/: cnn.py  dnn.cpp  evaluate.py  readme.md  rnn.py  util.py
信号处理原理/exp1/: exp1.m
信号处理原理/exp2/: exp2.m
信号处理原理/exp3/: exp3.m
信号处理原理/hw/: 第七次作业_评语.txt  第九次作业_评语.txt  第八次作业_评语.txt  第六次作业_评语.txt  第十次作业_评语.txt
存储技术基础/: readme.md
嵌入式系统/: readme.md
操作系统/: readme.md
数值分析/: readme.md
数字逻辑实验/: week11.md  week12.md  week3.doc  week5.md  week7.md  week9.md
数字逻辑实验/week7/: gen.cpp  res.txt  simplify.cpp
数字逻辑设计/: pre.pptx  readme.md
数字逻辑设计/chess1/: Chess.qsf  Chess.sof  Chess.vhd  lib.vhd
数字逻辑设计/chess2/: Chess.qpf  Chess.qsf  Chess.sof  Chess.vhd  input.vhd  lib.vhd
数据库系统概论/: readme.md
数据挖掘/: readme.md
数据挖掘/hw2/: hw2.tex  t2.py
数据挖掘/hw3/: 100_word_vector.txt  README  t1.py  t2.py
数据挖掘/hw4/: hw4.tex  t1.dot  t2.py
数据挖掘/hw5/: decision_tree.py  hw5.tex  tree.dot
数据挖掘/hw6/: hierarchical.py  hw6.tex  kmeans.py  max_hierarchical.dot  min_hierarchical.dot
数据结构/: BitSet.h  RBTree.h  RTree.cpp  Set.cpp  SkipList.cpp  Splay.h  StlAlgo.h  UIntSet.h  Vec.h  expr.cpp  readme.md  time.txt
数据结构/BigInt/: BigInt.cpp  gen.py  judge.sh  ntt.cpp  std.py  tmp.py
数据结构/Hash/: HashMap-Node.cpp  HashMap.h  HashSet.h
数据结构/KMP/: next  next.cpp
数据结构/Mmap/: common.h  copy.c  fread.cpp  gen.cpp  getchar.cpp  getchar_unlocked.cpp  mmap.cpp  scanf.cpp
数据结构/Mooc/: Broadcast.cpp  Cycle.cpp  Deduplicate.cpp  LightHouse.cpp  Range.cpp  Rebuild.cpp  Schedule.cpp  TSP  TSP.cpp  Temperature.cpp  Train.cpp
数据结构/PA1/: 1-ntt.cpp  1.cpp  1.md  2.cpp  2.md  3.cpp  3.md  4-queue.cpp  4.cpp  4.md  5-BTree.cpp  5-BTree.md  5-RBTree.cpp  5.cpp  5.md  6-list.cpp  6-stack.cpp  6.cpp  6.md  7.cpp  8.cpp
数据结构/PA2/: 1-ntt.cpp  1.cpp  1.md  2.cpp  2.md  3.1.cpp  3.cpp  3.md  4-estimate.cpp  4-hack.cpp  4.cpp  4.md  6.cpp  6.md  sort.h  sort_lib.cpp  temperature.h  temperature_lib.cpp
数据结构/PA3/: 1-zkw.cpp  1.1.cpp  1.cpp  1.md  2.cpp  2.md  3.cpp  3.md  4.cpp  4.md  5.cpp  5.md  6.cpp  7.cpp  8.cpp  crc.cpp  crc.h  kth.h  kth_lib.cpp
数据结构/RadixSort/: bench  bench.cpp  f4_sort.h  radix_sort.h  u4_sort.h
数据结构/Sort/: inverse_pair.cpp  k_merge_sort.cpp  lower_boud.cpp  merge_sort.cpp  nth_element.cpp  qsort.cpp  radix_sort.cpp  radix_sorts.cpp  shell_sort.cpp  test_qsort.cpp
数据结构/Tree/: BTree.h  BTreeSet.cpp  MultiSeg-Dynamic.cpp  tree_walk.cpp
数据结构/getline/: gen.py  getline.cpp  naive.cpp
数据结构/tmp/: 4-gen.py  4-hack-2.cpp  4-winner-tree.cpp  6-gen.py  cpuid.cpp  extract_bit.cpp  gen1.py  gen2.py  gen3.py  hash_killer.cpp  merge_bit.cpp  test.c  test.cpp
汇编语言程序设计/hw2/: countln.s  getln.s  input.txt  input1.txt  test_getln.c
汇编语言程序设计/hw3_attach_lab/: 1.txt  2.txt  3.txt  4.txt  5.txt  ctarget  hex2raw  rtarget
离散数学(1)/: 李晨昊+第2周_评语.txt
程序设计基础/: readme.md
程序设计训练/: 课堂报告.ppt
程序设计训练/week1exam/Week1T2/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  Week1T2.pro
程序设计训练/week1exam/Week1T3/: CMakeLists.txt  Main.cpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  Week1T3.pro  resource.qrc  sound.qrc
程序设计训练/week1hw/Week1Lab23/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  resource.qrc
程序设计训练/week1proj/: CMakeLists.txt  ConfigureDialog.cpp  ConfigureDialog.hpp  ConfigureDialog.ui  DesignDialog.cpp  DesignDialog.hpp  DesignDialog.ui  DoubleToColor.cpp  DoubleToColor.hpp  MCSFrame.cpp  MCSFrame.hpp  Main.cpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  Solver.cpp  Solver.hpp
程序设计训练/week1proj/doc/: mcs.md
程序设计训练/week2ehw/Week2Lab21/: CMakeLists.txt  Main.cpp  Week2Lab21.pro  Worker.hpp  plot.py  result.txt
程序设计训练/week2ehw/Week2Lab22/: CMakeLists.txt  Client.cpp  Client.hpp  Dialog.cpp  Dialog.hpp  Dialog.ui  Main.cpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  Server.cpp  Server.hpp  Week2Lab22.pro
程序设计训练/week2exam/Week2T1/: CMakeLists.txt  Dialog.cpp  Dialog.hpp  Dialog.ui  Main.cpp  Server.cpp  Server.hpp  Server.ui
程序设计训练/week2exam/Week2T2/: CMakeLists.txt  Main.cpp
程序设计训练/week2exam/Week2T3/: CMakeLists.txt  Client.cpp  Client.hpp  Client.ui  Main.cpp  Server.cpp  Server.hpp  Server.ui
程序设计训练/week2proj/: CMakeLists.txt  ChessFrame.cpp  ChessFrame.hpp  Client.cpp  Client.pro  IPDialog.cpp  IPDialog.hpp  IPDialog.ui  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  Server.cpp  Server.pro  resource.qrc  残局样例文件.txt
程序设计训练/week2proj/doc/: doc.md
程序设计训练/week2proj/image/: gen.py
程序设计训练/week3proj/: manage.py  readme.md
编译原理/: readme.md
编译原理专题训练/: readme.md
网络编程技术/: client.cpp  defer.hpp  makefile  readme.md  server.cpp
网络编程技术/report/: report.tex
计算机系统结构/: readme.md
计算机系统结构/cache/: main.cpp  makefile
计算机系统结构/tomasulo/: common.hpp  inst.hpp  main.cpp  makefile  op.hpp  tomasulo.hpp
计算机系统结构/书面/: hw2错误.txt  hw3错误.txt  hw4_cache.py
计算机网络原理/: readme.md
软件分析与验证/: readme.md
软件分析与验证/pa1-dpll/: CMakeLists.txt  DPLL.h  DPLL.h.basic  DimacsParser.h  bitset.hpp  main.cpp
软件分析与验证/pa2-heap/: Heap.dfy
面向对象程序设计基础/: 代码阅读.md
面向对象程序设计基础/MST/: PlaneMST.cpp  readme.md
面向对象程序设计基础/template/: SFINAE.cpp  STMP.cpp  StaticList.cpp  args-array.cpp  const_array.cpp  constcast.cpp  forward-Args.cpp  fuck_msvc_constexpr.cpp  heapsort-complie.cpp  is_invocable.cpp  rtti.cpp  stdforward.cpp  total_ordering.cpp  typetraits.cpp  veb-compile.cpp
面向对象程序设计基础/test/: ChangeAccess.cpp  (+22 more)
高性能计算导论/: readme.md
(+403 files in other folders)
